--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>赞助站长-万能收款码支持-支付宝、微信、QQ</title>
+    <title>星宇wechat and ali pay</title>
     
     <script>
     var setting = {
@@ -116,7 +116,7 @@
         <div class="code-area">
             <img id="wechat-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">长按二维码</div>
+        <div class="code-footer">长按二维码点击识别图中二维码</div>
     </div>
     
     <script>
