--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
     var setting = {
         // 在以下双引号中粘贴QQ钱包收款链接
-    //    qqUrl: "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&a=1&u=1070238&ac=123AA8FA99EAEECBA53D8A29BF8B06963AEA141B073F9DD9DF683C03991BFEC9&n=?????&f=wallet",
+    //    qqUrl: "",
         
         // 在以下双引号中粘贴微信收款链接
         wechatUrl: "wxp://f2f0WcUcBUzAQIF0TXkj0RKE5eg93aQx72ee",
