--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
 </head>
 <body>
+    <a href="/indexx">click</a>
     <!-- 万能收款码展示区域 -->
     <div class="code-item" id="code-all">
         <div class="code-title"></div>
