--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="bootstrap.css" rel=stylesheet>
 	<meta charset="utf-8"> 
-	<title>导航</title>
+	<title>生日快乐</title>
 	
 </head>
 
@@ -47,7 +47,7 @@ $(".queding").click(function(){
     </div>
   </div>
   
-  <img src="http://pic.netbian.com/tupian/4650.html">
+  <img src="./shengrikuai.jpg">
   
   
   
