--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ $(".queding").click(function(){
 </script>
   
 	<style>
+		.bianda{
+		font-size:200px;
+		}
   .bgcolor{
   background-color:#888;
   color:white;
@@ -39,9 +42,9 @@ $(".queding").click(function(){
 
   <div class="row">
     <div class="yingshibofang ">
-      <h1 class="text-center text-primary"><a id="yingshibofang">生日快乐</a></h1>
-		<div class="col-xs-6"><button class="btn btn-block btn-danger queding">确定长大</button></div>
-		<div class="col-xs-6"> <a href="https://music.163.com/#/song?id=548024040"><button class="btn btn-block btn-primary">不确定</button></a></div>
+      <h1 class="bianda text-center text-primary"><a id="yingshibofang">生日快乐</a></h1>
+		<div class="bianda col-xs-12"><button class="btn btn-block btn-danger queding">确定长大</button></div>
+		<div class="bianda col-xs-12"> <a href="https://music.163.com/#/song?id=548024040"><button class="btn btn-block btn-primary">不确定</button></a></div>
 
 		
     </div>
