--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ $(".queding").click(function(){
     </div>
   </div>
   
-  <img src="./shengrikuai.jpg">
+  <img class="img-responsive" src="https://tse2-mm.cn.bing.net/th?id=OIP.v0MyXrmYpgCie_oCW7vN9AHaHQ&w=203&h=199&c=7&o=5&pid=1.7">
+
   
   
   
