--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@ $(".queding").click(function(){
 		
     </div>
   </div>
-  
-  <img class="img-responsive" src="https://tse2-mm.cn.bing.net/th?id=OIP.v0MyXrmYpgCie_oCW7vN9AHaHQ&w=203&h=199&c=7&o=5&pid=1.7">
+  <div align="center">
+  <img class="aling-center" src="https://tse2-mm.cn.bing.net/th?id=OIP.v0MyXrmYpgCie_oCW7vN9AHaHQ&w=203&h=199&c=7&o=5&pid=1.7">
+</div>
 
   
   
