--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@ $(".queding").click(function(){
 
   <div class="row">
     <div class="yingshibofang ">
-      <h1 class="bianda text-center text-primary"><a id="yingshibofang">生日快乐</a></h1>
+      <h1 class="bianda text-center text-primary"><a id="yingshibofang"><p class="bianda">生日快乐</p></a></h1>
 		<div class="bianda col-xs-12"><button class="btn btn-block btn-danger queding">确定长大</button></div>
+		<br />
+		<br />
 		<div class="bianda col-xs-12"> <a href="https://music.163.com/#/song?id=548024040"><button class="btn btn-block btn-primary">不确定</button></a></div>
 
 		
@@ -53,7 +55,7 @@ $(".queding").click(function(){
   <img class="aling-center" src="https://tse2-mm.cn.bing.net/th?id=OIP.v0MyXrmYpgCie_oCW7vN9AHaHQ&w=203&h=199&c=7&o=5&pid=1.7">
 </div>
 
-  
+   
   
   
   
